--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "Szablon React",
+  "name": "ReactSport",
   "version": "1.0.0",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
-    "start": "npm-run-all --parallel test:watch open:src lint:watch",
+    "start": "npm-run-all --parallel open:src lint:watch",
     "open:src": "babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
@@ -18,15 +18,21 @@
   },
   "dependencies": {
     "babel-polyfill": "6.8.0",
-    "bootstrap": "3.3.6",
+    "bootstrap": "3.3.7",
     "jquery": "2.2.3",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
+    "prop-types-extra": "^1.0.1",
+    "react": "^15.6.1",
+    "react-bootstrap": "0.31.0",
+    "react-dom": "^15.6.1",
     "react-redux": "4.4.5",
-    "react-router": "2.4.0",
+    "react-router": "2.5.2",
+    "react-router-bootstrap": "0.24.2",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.70.0",
+    "tether": "1.4.0",
     "toastr": "2.1.2"
   },
   "devDependencies": {
@@ -58,11 +64,12 @@
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
     "react-addons-test-utils": "15.0.2",
+    "react-bootstrap": "0.31.0",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
     "rimraf": "2.5.2",
     "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
+    "url-loader": "^0.5.7",
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0"
