--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "expect": "1.19.0",
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.8.5",
+    "file-loader": "^0.8.5",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
@@ -69,7 +69,7 @@
     "redux-mock-store": "1.0.2",
     "rimraf": "2.5.2",
     "style-loader": "0.13.1",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.9",
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0"
