--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.7",
+    "d": "^1.0.0",
     "jquery": "2.2.3",
+    "moment": "^2.18.1",
     "prop-types-extra": "^1.0.1",
     "react": "^15.6.1",
     "react-bootstrap": "0.31.0",
